cmake_minimum_required(VERSION 3.28)
project(forwardList)

set(CMAKE_CXX_STANDARD 17)

add_executable(main main.cpp)
add_executable(Front Front.cpp)
add_executable(Back Back.cpp)
add_executable(PushFront PushFront.cpp)
add_executable(PushBack PushBack.cpp)
add_executable(PopFront PopFront.cpp)
add_executable(PopBack PopBack.cpp)
add_executable(Operator Operator.cpp)
add_executable(Empty Empty.cpp)
add_executable(Size Size.cpp)
add_executable(Clear Clear.cpp)
add_executable(Sort Sort.cpp)
add_executable(Reverse Reverse.cpp)